# rcdoc-backend

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  flake.nix  get_db.sh  set_db_env.sh
.sqlx/: query-0cdf42f89020c362af3af666348cb979ed570af20ab6cd6740a2bfd15d5ecc7b.json  query-19c32025d4e137b5b49081f5116370c168b76c55b4c3563acdc00b9665d3e67b.json  query-7837365514560d2de86ec85e26ff7ddba688eea5e1a4b1ac2812a53ccb2db3da.json  query-bfb4c55fb7fdd70e6540972fe63b21dd0f24bff4550537fa70910f6b3ab3533a.json
migrations/: 0001_initial.sql  0001_user.sql  0002_document.sql  0003_revision.sql  0004_tag.sql  0005_tag_category.sql  0006_ms_auth.sql  0006_tag_assignment.sql
src/: main.rs  schema.rs  store.rs
src/api/: doc.rs  mod.rs  tag.rs  test.rs
src/auth/: api.rs  middleware.rs  mod.rs  ms_api.rs
