[package]
name = "rcdoc_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core crates
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }

# Meat of the stack
poem-openapi = { version = "3.0.5", features = ["swagger-ui", "openapi-explorer", "time", "uuid"] }
poem = { version = "1.3.58", features = ["static-files"] }
redis = { version = "0.24.0", features = ["tokio-native-tls-comp"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "uuid", "postgres", "time"] }

# Debugging
color-eyre = "0.6.2"
tracing = "0.1.37"

# Serde
serde_json = "1.0.107"
serde_qs = "0.12.0"

# Utils
dotenv_codegen = "0.15.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
const_format = "0.2.32"

# Additional crates
poem-grants = "1.0.0-beta.3"
time = { version = "0.3.30", features = ["serde", "large-dates", "local-offset"] }
reqwest = "0.11.22"
tracing-subscriber = "0.3.17"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["serde"]}
